--- a/404.html
+++ b/404.html
@@ -13,6 +13,6 @@
 	<body oncontextmenu=self.event.returnValue=false onselectstart="return false"> 
 		<div class="error"></div> 
 		<p>404 Error!</p> 
-		<a href="/">Go back</a>  
+		<a href="/new/">Go back</a>
 	</body>
 </html>
